--- a/ev-analysis-dashboard/netlify.toml
+++ b/ev-analysis-dashboard/netlify.toml
@@ -1,5 +1,6 @@
 [build]
-  publish = "dist"
+  base = "ev-analysis-dashboard"
+  publish = "ev-analysis-dashboard/dist"
   command = "npm run build"
 
 [build.environment]
